# data-registry

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile_django  Dockerfile_static  README.md  README.rst  biome.json  build.mjs  build.sh  data-registry.env  default.conf  docker-compose.yaml  gunicorn_dqt01.py  gunicorn_runner.sh  integration.py  knip.jsonc  pa11y.default.js  pa11y.default.json  pa11y.mobile.js  pa11y.mobile.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  requirements.txt.sha256  requirements_dev.in  requirements_dev.txt  requirements_types.txt  setup.cfg  webpack.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new-publication.md
.github/workflows/: a11y.yml  ci.yml  docker-build.yml  docker.yml  i18n.yml  js.yml  lint.yml
.tx/: config
core/: admin.py  amy01_wsgi.py  apps.py  context_processors.py  docker_wsgi.py  dqt01_wsgi.py  settings.py  urls.py
core/settings/: amy01.py  base.py  dev01_kuba.py  dev01_kuba_test.py  docker.py  dqt01.py  github.py  production.py  test.py
data_registry/: admin.py  apps.py  exceptions.py  forms.py  i18n.py  middleware.py  models.py  signals.py  sitemaps.py  translation.py  urls.py  util.py  utils.py  views.py
data_registry/cbom/: process.py  tasks.py  utils.py
data_registry/migrations/: 0001_initial.py  0002_auto_20210329_0951.py  0003_auto_20210329_1309.py  0004_auto_20210401_0902.py  0009_task_context.py  (+76 more)
docs/: cli.rst  conf.py  index.rst  requirements.txt
exporter/: middleware.py  urls.py  util.py  views.py
tests/: __init__.py
(+133 files in other folders)
