[project]
name = "data-registry"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1", "D205",
    "DTZ",
    "PLR2004",  # magic
    "PTH",
    "S308",  # mark_safe
    "D200",  # https://github.com/astral-sh/ruff/issues/6269
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D100", "INP001"]
"manage.py" = ["PLC0415"]
"{*/signals,*/views,*/migrations/*}.py" = ["ARG001"]
"{*/admin,*/routers,*/views,*/commands/*}.py" = ["ARG002"]
"{*/admin,*/forms,*/models,*/routers,*/migrations/*,tests/*}.py" = ["RUF012"]
"*/translation.py" = ["RUF012"]
"*/migrations/*" = ["E501"]
"tests/*" = [
    "D", "FBT003", "INP001", "PLR2004", "PT", "S", "TRY003",
    "ARG002",  # mock
]
"*/commands/*" = [
    "ARG001",  # pika
]
"data_registry/process_manager/*" = [
    "TRY003",  # errors
]

[tool.coverage.run]
omit = ['*/migrations/*']

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
